# maestro

./: .env.example  .gitignore  .windsurfrules  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  release.example.yaml  release_teste.yaml  release_teste_2.yaml  test_db.py  test_schedule.py  test_validation.py
.agents/tasks/task-archive-releases/features/: FEAT-001.json
.agents/tasks/task-auth-system/: 2026-06-11-221702-review.md  context.json  task.json
.agents/tasks/task-auth-system/features/: FEAT-001.json  FEAT-002.json  FEAT-003.json
.agents/tasks/task-schedule-release/: 2025-01-15-120000-review.md  context.json  task.json
.agents/tasks/task-schedule-release/features/: FEAT-001.json  FEAT-002.json  FEAT-003.json
.agents/tasks/task-sqlite-support/features/: FEAT-001.json
.agents/tasks/task-ui-permission-feedback/: context.json  task.json
.agents/tasks/task-ui-permission-feedback/features/: FEAT-001.json
migrations/: env.py
migrations/versions/: 528447aa8a58_create_orchestrator_descriptor.py  5995f0803bff_create_release_execution.py  77fa95ecd37b_create_release_step_execution.py  7e5906e5458f_add_users_table.py  a1b2c3d4e5f6_create_ui_settings.py  b2c3d4e5f6a7_create_step_event.py  c3d4e5f6a7b8_create_execution_action_log.py  d4e5f6a7b8c9_create_scheduled_release.py  e5f6a7b8c9d0_create_job_path_registry.py  f6a7b8c9d0e1_add_archived_to_orchestrator_descriptor.py  f6a7b8c9d0e1_create_auth_tables.py  g7b8c9d0e1f2_add_environment_to_release_execution.py
postman/: Maestro.postman_collection.json
scratch/: patch_ui.py
src/maestro/: __init__.py  main.py
src/maestro/api/routes/: auth.py  callback.py  job_path_registry.py  orchestrator.py  ui.py  users.py
src/maestro/auth/: dependencies.py  security.py
src/maestro/config/: crypto.py  logger.py  settings.py
src/maestro/database/: models.py  session.py
src/maestro/integration/: __init__.py  github.py  jenkins.py
src/maestro/repositories/: auth.py  execution.py  job_path_registry.py  orchestrator.py  schedule.py  settings.py  user.py
src/maestro/schemas/: callback.py  enums.py  github.py  jenkins.py  job_path_registry.py  orchestrator.py  schedule.py
src/maestro/services/: app_settings.py  auth.py  build_poller.py  jenkins.py  job_path_registry.py  job_path_resolver.py  orchestrator.py  scheduler.py  settings.py  timeout_checker.py  ui.py  user.py  validation.py
src/maestro/ui/templates/: base.html  change_password.html  execution_detail.html  index.html  (+8 more)
tests/: __init__.py  conftest.py  test_abort_approve_step.py  test_archive_releases.py  test_auth.py  test_auth_routes.py  test_dry_run.py  test_integrations.py  test_job_path_registry.py  test_main.py  test_process_workflow.py  test_repositories.py  test_routes.py  test_scheduler.py  test_schemas.py  test_services.py  test_timeout_checker.py  test_ui_permissions.py  test_ui_routes.py
tests/integration/: conftest.py  test_callback_flow.py  test_orchestrator_flow.py  test_settings_flow.py
(+23 files in other folders)
