[project]
name = "maestro"
version = "0.1.0"
description = "Orquestrador de releases em Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "asyncpg",
    "aiosqlite",
    "pydantic-settings",
    "alembic>=1.18.4",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "pydantic>=2.0.0",
    "python-json-logger>=4.1.0",
    "greenlet>=3.5.1",
    "sse-starlette>=3.4.4",
    "cryptography>=44.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
maestro = "maestro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that require Docker (Testcontainers)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pythonjsonlogger",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-httpx>=0.35.0",
    "testcontainers[postgres]>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["maestro"]
